--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -38,20 +38,38 @@
         </div>
     </nav>
 
-    <section class="container my-5 text-center">
-        <h2>Contáctenos</h2>
-        <form>
-            <div class="mb-3">
-                <input type="text" class="form-control" placeholder="Nombre">
+    <section class="container my-5">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Contáctenos</h2>
+                <p>¿Tienes alguna pregunta? Envíanos un mensaje y te responderemos lo antes posible.</p>
+                <form>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" placeholder="Tu Nombre">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="email" placeholder="correo@ejemplo.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="mensaje" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje aquí..."></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Enviar Mensaje</button>
+                </form>
             </div>
-            <div class="mb-3">
-                <input type="email" class="form-control" placeholder="Correo Electrónico">
+            <div class="col-md-6 text-center">
+                <h2>Visítanos</h2>
+                <p>Encuéntranos en nuestra ubicación y disfruta de nuestros productos.</p>
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345094315!2d144.9537363153159!3d-37.81627927975167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d452f4f2c3b%3A0x9b4e82f25f7c4e0!2sPasteler%C3%ADa%20Ban%20Ban!5e0!3m2!1ses!2s!4v1633071234567!5m2!1ses!2s"
+                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+                <p><strong>Teléfono:</strong> +123 456 7890</p>
+                <p><strong>Email:</strong> contacto@pasteleriabanban.com</p>
             </div>
-            <div class="mb-3">
-                <textarea class="form-control" rows="4" placeholder="Mensaje"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
