--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                             <a class="nav-link mx-lg-2 active" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="/paginas/productos.html">Productos</a>
+                            <a class="nav-link mx-lg-2" href="./paginas/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="/paginas/contacto.html">Contactenos</a>
+                            <a class="nav-link mx-lg-2" href="./paginas/contacto.html">Contactenos</a>
                         </li>
                     </ul>
                 </div>
