--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -23,10 +23,10 @@
                             <a class="nav-link mx-lg-2" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="productos.html">Productos</a>
+                            <a class="nav-link mx-lg-2" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2 active" href="contacto.html">Contactenos</a>
+                            <a class="nav-link mx-lg-2 active" href="./contacto.html">Contactenos</a>
                         </li>
                     </ul>
                 </div>
