--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banbansv</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/menu.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
@@ -51,8 +51,8 @@
             <h3>Desde 1975🇸🇻</h3>
         </div>
         
-        <img src="/img/img1.jpg" class="img-fluid" alt="Pastel de bienvenida">
-        <img src="/img/img2.jpg" class="img-fluid" alt="Pastel de bienvenida">
+        <img src="./img/img1.jpg" class="img-fluid" alt="Pastel de bienvenida">
+        <img src="./img/img2.jpg" class="img-fluid" alt="Pastel de bienvenida">
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
