--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banbansv</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/contacto.css">
-    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="../css/contacto.css">
+    <link rel="stylesheet" href="../css/menu.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-    <section class="container my-5">
+    <section class="container my-5 contacto">
         <div class="row">
             <div class="col-md-6">
                 <h2>Contáctenos</h2>
