--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banbansv</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/contacto.css">
     <link rel="stylesheet" href="../css/menu.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand me-auto" href="#">BanBan</a>
+            <a class="navbar-brand me-auto" href="#">
+                <img src="../img/logo.jpg" alt="BanBan" height="50">
+            </a>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Logo</h5>
@@ -38,39 +41,62 @@
         </div>
     </nav>
 
-    <section class="container my-5 contacto">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Contáctenos</h2>
-                <p>¿Tienes alguna pregunta? Envíanos un mensaje y te responderemos lo antes posible.</p>
-                <form>
-                    <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Tu Nombre">
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="email" placeholder="correo@ejemplo.com">
-                    </div>
-                    <div class="mb-3">
-                        <label for="mensaje" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje aquí..."></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Enviar Mensaje</button>
-                </form>
+    <div class="contacto">
+        <section class="container my-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Contáctenos</h2>
+                    <p>¿Tienes alguna pregunta? Envíanos un mensaje y te responderemos lo antes posible.</p>
+                    <form>
+                        <div class="mb-3">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombre" placeholder="Tu Nombre">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Correo Electrónico</label>
+                            <input type="email" class="form-control" id="email" placeholder="correo@ejemplo.com">
+                        </div>
+                        <div class="mb-3">
+                            <label for="mensaje" class="form-label">Mensaje</label>
+                            <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje aquí..."></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Enviar Mensaje</button>
+                    </form>
+                </div>
+                <div class="col-md-6 text-center">
+                    <h2>Visítanos</h2>
+                    <p>Encuéntranos en nuestra ubicación y disfruta de nuestros productos.</p>
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345094315!2d144.9537363153159!3d-37.81627927975167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d452f4f2c3b%3A0x9b4e82f25f7c4e0!2sPasteler%C3%ADa%20Ban%20Ban!5e0!3m2!1ses!2s!4v1633071234567!5m2!1ses!2s"
+                        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+                    </iframe>
+                    <p><strong>Teléfono:</strong> +123 456 7890</p>
+                    <p><strong>Email:</strong> contacto@pasteleriabanban.com</p>
+                </div>
             </div>
-            <div class="col-md-6 text-center">
-                <h2>Visítanos</h2>
-                <p>Encuéntranos en nuestra ubicación y disfruta de nuestros productos.</p>
-                <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345094315!2d144.9537363153159!3d-37.81627927975167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d452f4f2c3b%3A0x9b4e82f25f7c4e0!2sPasteler%C3%ADa%20Ban%20Ban!5e0!3m2!1ses!2s!4v1633071234567!5m2!1ses!2s"
-                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
-                </iframe>
-                <p><strong>Teléfono:</strong> +123 456 7890</p>
-                <p><strong>Email:</strong> contacto@pasteleriabanban.com</p>
+        </section>
+    </div>
+    <footer class="bg-dark text-light text-center py-4 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <h5>Pastelería Ban Ban</h5>
+                    <p>Deliciosos postres y pasteles para cada ocasión.</p>
+                </div>
+                <div class="col-md-6" style="color: #fff;">
+                    <h5>Síguenos en redes sociales</h5>
+                    <a href="https://www.facebook.com/BanBanSv?mibextid=LQQJ4d"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/banbansv/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://x.com/banbansv"><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="https://www.tiktok.com/@banbanpasteleria?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://www.youtube.com/@banbansv494"><i class="fa-brands fa-youtube"></i></a>
+                    
+                </div>
             </div>
+            <hr class="bg-light">
+            <p class="mb-0">&copy; 2024 Pastelería Ban Ban. Todos los derechos reservados.</p>
         </div>
-    </section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
