--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banbansv</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/productos.css">
     <link rel="stylesheet" href="../css/menu.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand me-auto" href="#">BanBan</a>
+            <a class="navbar-brand me-auto" href="#">
+                <img src="../img/logo.jpg" alt="BanBan" height="50">
+            </a>
             
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -47,7 +50,7 @@
                 <div class="card">
                     <img src="../img/prod1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">TIRAMISU CAKE</h5>
+                        <h5 class="card-title">CAKE</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
                             dignissimos accusantium amet similique velit iste.</p>
                     </div>
@@ -62,7 +65,7 @@
                 <div class="card">
                     <img src="../img/prod2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">TIRAMISU CAKE</h5>
+                        <h5 class="card-title">CAKE</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
                             dignissimos accusantium amet similique velit iste.</p>
                     </div>
@@ -77,7 +80,7 @@
                 <div class="card">
                     <img src="../img/prod3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">TIRAMISU CAKE</h5>
+                        <h5 class="card-title">CAKE</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
                             dignissimos accusantium amet similique velit iste.</p>
                     </div>
@@ -92,7 +95,7 @@
                 <div class="card">
                     <img src="../img/prod4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">TIRAMISU CAKE</h5>
+                        <h5 class="card-title">CAKE</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
                             dignissimos accusantium amet similique velit iste.</p>
                     </div>
@@ -107,7 +110,7 @@
                 <div class="card">
                     <img src="../img/prod5.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">TIRAMISU CAKE</h5>
+                        <h5 class="card-title">CAKE</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
                             dignissimos accusantium amet similique velit iste.</p>
                     </div>
@@ -122,7 +125,7 @@
                 <div class="card">
                     <img src="../img/prod6.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">TIRAMISU CAKE</h5>
+                        <h5 class="card-title">CAKE</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
                             dignissimos accusantium amet similique velit iste.</p>
                     </div>
@@ -132,10 +135,29 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
+    <footer class="bg-dark text-light text-center py-4 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 mb-3" style="color: #fff;">
+                    <h5>Pastelería Ban Ban</h5>
+                    <p>Deliciosos postres y pasteles para cada ocasión.</p>
+                </div>
+                <div class="col-md-6" >
+                    <h5 style="color: #fff;">Síguenos en redes sociales</h5>
+                    <a href="https://www.facebook.com/BanBanSv?mibextid=LQQJ4d"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/banbansv/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://x.com/banbansv"><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="https://www.tiktok.com/@banbanpasteleria?is_from_webapp=1&sender_device=pc"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://www.youtube.com/@banbansv494"><i class="fa-brands fa-youtube"></i></a>
+                    
+                </div>
+            </div>
+            <hr class="bg-light">
+            <p class="mb-0">&copy; 2024 Pastelería Ban Ban. Todos los derechos reservados.</p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
